SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    1 July 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150701
Tag Summary: Introduce new interface module for dealing with share stream
             code. Note that this will allow removal CCSMCOUPLED macro from
             ecosys_mod but that update hasn't been incorporated yet.

Files Modified:
M       source/ecosys_mod.F90
A       source/strdata_interface_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    30 June 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150630
Tag Summary: save attribute in module variable after global save was casusing
             compilation error in nag; also removed some un-used variables.

Files Modified:
M       source/POP_SolversMod.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    20 May 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150520
Tag Summary: New preconditioner for barotropic solver doesn't work on default
             gx3v7 layout for yellowstone; while investigating this issue,
             we'll go back to the old solver / preconditioner for the 3 deg
             resolution. Also removed some debugging lines of code left in
             barotropic.F90 by mistake.

Files Modified:
M       bld/namelist_files/namelist_defaults_pop.xml
M       source/barotropic.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    15 May 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150515
Tag Summary: New namelist defaults to use updated barotropic solver

Files Modified:
M       bld/namelist_files/namelist_defaults_pop.xml
===============================================================================
Tag Creator: mlevy