@@ -2,6 +2,18 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  klindsay, mlevy
+Tag Date:    10 July 2015
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150710
+Tag Summary: Add tavg fields for total tracer tendency. Use TEND_[shortname]
+             e.g. TEND_TEMP for temperature and TEND_SALT for salinity. These
+             fields are available for all tracer modules.
+
+Files Modified:
+M       source/baroclinic.F90
+M       source/passive_tracers.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  mlevy
 Tag Date:    1 July 2015
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150701
